# BSUIR

./: README.md
sem1/PiOIvIS/RR/: main.cpp  test0.txt  test1.txt  test2.txt  test3.txt  test4.txt
sem1/TMOIS/lab1/: main.cpp
sem1/TMOIS/lab2/: main.cpp
sem2/English/: Career path.txt  Computer networks.txt  Computer programming.txt  Digital security.txt  ICT concepts.txt  Information systems.txt  Job huntig.txt  My university.txt  Software concepts.txt  Youth and society.txt
sem2/OAiP/lab2/: Header.h  Source.cpp  main.cpp
sem2/OAiP/lab3/: Header.h  Source.cpp  main.cpp
sem2/OAiP/lab4/: main.cpp
sem2/OAiP/lab5/: Header.h  Source.cpp  main.cpp
sem2/OAiP/lab6/: Header.h  Source.cpp  main.cpp
sem2/OAiP/lab7/: S2_7.5.cpp
sem2/OAiP/lab8/: Header.h  main.cpp
sem2/PiOIvIS/lab1/: pioivis_lr1_1.sln
sem2/PiOIvIS/lab2/: lr_2.sln
sem3/CM/IDZ/: ИДЗ1.cdf
sem3/CM/TR/: ТР.nb
sem3/CM/lab1/: ЧМ1_№1_1.cdf  ЧМ1_№1_2.cdf  ЧМ1_№2.cdf  ЧМ1_№3.cdf
sem3/CM/lab2/: ЧМ2.nb
sem3/CM/lab4/: ЧМ4.nb
sem3/CM/lab5/: ЧМ5.nb
sem3/CM/lab6/: ЧМ6.nb
sem3/MOIS/lab1/: sum.scs  triangle.gwf
sem3/MOIS/lab2/: idtf.scs  section_subject_domain_of_geometry.scs
sem3/MOIS/rr/agentsModule/: CMakeLists.txt  agentsModule.cpp  agentsModule.hpp  keynodes.cpp  keynodes.hpp  lineGraphAgent.cpp  lineGraphAgent.hpp
sem3/MOIS/rr/agentsModule/specification/: lib_component_ui_menu_linegraph.scs  ui_menu_linegraph.scs
sem3/MOIS/rr/graphModule/: CMakeLists.txt  myModule.cpp  myModule.hpp
sem3/MOIS/rr/graphModule/agents/: myAgent.cpp  myAgent.hpp
sem3/MOIS/rr/graphModule/keynodes/: keynodes.cpp  keynodes.hpp
sem3/MOIS/rr/graphModule/specifications/: bridge.scs
sem3/MOIS/rr/graphModule/specifications/agent_of_bridge_finding/: lib_component_ui_menu_bridge_agent.scs  ui_menu_bridge_agent.scs
sem3/MOIS/rr/isomorphicModule/: CMakeLists.txt  isomorphicModule.cpp  isomorphicModule.hpp
sem3/MOIS/rr/isomorphicModule/agents/: IsomorphicAgent.cpp  IsomorphicAgent.hpp
sem3/MOIS/rr/isomorphicModule/keynodes/: keynodes.cpp  keynodes.hpp
sem3/MOIS/rr/isomorphicModule/specifications/: lib_component_ui_menu_isomorphic.scs  ui_menu_isomorphic.scs
sem5/LOIS/lab1/: README.md  main.py  pyproject.toml
sem5/LOIS/lab1/src/: __init__.py
sem5/LOIS/lab1/src/exception/: __init__.py  parse_exception.py
sem5/LOIS/lab1/src/logic/: __init__.py  fuzzy_logic_algebra.py
sem5/LOIS/lab1/src/parser/: __init__.py  lexer.py  parser.py  token.py  utils.py
sem5/LOIS/lab1/src/set/: fuzzy_set_algebra.py
sem5/OIIS/: cпособы_получения_геоизображений.docx
sem5/OIIS/lab5/: main.py  pyproject.toml  report.odt
sem6/EYzIIS/lab1/backend/: .env.example  .gitignore  README.md  pyproject.toml
sem6/EYzIIS/lab1/backend/src/: config.py  database.py  main.py  schemas.py
sem6/EYzIIS/lab1/backend/src/dictionary/: dependencies.py  models.py  router.py  schemas.py  services.py
sem6/IAD/lab3/: main.ipynb  pyproject.toml
sem6/PZIIS/: report.odt
(+504 files in other folders)
