[tool.poetry]
name = "lab3"
version = "0.1.0"
description = ""
authors = ["Ehor Hleoza <gleoza04@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
