[tool.poetry]
name = "emnist"
version = "0.1.0"
description = ""
authors = ["Ehor Hlioza <gleoza04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kagglehub = "^0.3.8"
torch = "^2.6.0"
pandas = "^2.2.3"
torchvision = "^0.21.0"
torchmetrics = "^1.6.1"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
