[project]
name = "NLIIS-lab1"
version = "0.1.0"
description = "Application for counting lexes and word forms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.115.12",
    "natasha>=1.6.0",
    "pycryptodome>=3.22.0",
    "pypdf2>=3.0.1",
    "setuptools>=78.1.0",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "uvicorn>=0.34.1",
]
